# MusicDjam

./: .example.env  .gitignore  .plan  README.md  compose.example.yaml  compose.yaml
DockerScripts/Nginx/conf.d/: adminer.example.conf  django.example.conf  fs-admin.example.conf  fs-s3.example.conf  (+1 more)
Scripts/: download_fma.py  fma_requirements.txt  generate_env.py  setup.py  upload_fma.py
src/: Dockerfile  manage.py  pyproject.toml
src/api/: admin.py  authentication.py  models.py  repositories.py  serializers.py  services.py  tests.py  urls.py  views.py
src/api/migrations/: 0001_initial.py  0002_artist_filemetadata_file_type_filemetadata_fs_id_and_more.py  0003_artist_cover_user_profile_picture.py  0004_music_length.py
src/frontend/: context_processors.py  urls.py  views.py
src/locale/ka/LC_MESSAGES/: django.po
src/music_djam/: asgi.py  settings.py  urls.py  wsgi.py
src/musicdjam/: asgi.py  settings.py  urls.py  wsgi.py
src/static/css/: album-form.css  artist-form.css  base.css  detail.css  explore.css  form.css  music-form.css  music.css  player-bar.css  playlist-form.css  profile.css
src/templates/: album_card.html  album_detail.html  album_form.html  artist_card.html  artist_detail.html  artist_form.html  base.html  index.html  login.html  music_card.html  music_form.html  playlist_card.html  playlist_detail.html  playlist_form.html  profile.html  register.html  shared_form_styles.html  shared_music_styles.html  shared_player_bar.html  user_card.html
src/users/: models.py
src/users/migrations/: 0001_initial.py
ssl/: fullchain.pem  privkey.pem
