[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earpiece"
version = "0.1.0"
description = "High-performance REST API for music catalog streaming via SeaweedFS S3 storage."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Luka Lominadze" }
]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Operating System :: :: Linux",
]
dependencies = [
    "Django>=5.0,<5.1",
    "djangorestframework>=3.15.0",
    "djangorestframework-simplejwt>=5.3.1",
    "psycopg[binary]>=3.1.18",
    "redis>=5.0.3",
    "boto3>=1.34.0",
    "django-storages[s3]>=1.14.0",
    "python-dotenv>=1.0.1",
    "argon2-cffi>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "django-types>=0.19.1"
]

[tool.setuptools.packages.find]
where = ["."]
